--- a/scroll2/style.css
+++ b/scroll2/style.css
@@ -18,7 +18,15 @@ a {
 main {
 	width: 100%;
 	height: 100vh;
-	background-color: pink;
+}
+
+@keyframes Rotate {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 /* header */
@@ -55,7 +63,7 @@ nav {
 }
 
 .one h1 {
-	font-size: 20vw;
+	font-size: 25vw;
 	color: #fff;
 }
 
@@ -63,6 +71,7 @@ nav {
 	position: absolute;
 	top: 10%;
 	left: 35%;
+	transform: rotate(30deg);
 	z-index: 1;
 	width: 40%;
 }
@@ -79,4 +88,61 @@ nav {
 	left: 47%;
 	width: 12%;
 	z-index: 3;
+}
+
+/* two */
+
+.two {
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	background-color: #cbffa9;
+}
+
+.left,
+.right {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	width: 50%;
+	gap: 10vh;
+}
+
+.left {
+	background-color: #fffec4;
+}
+
+.left svg {
+	margin-top: 35vw;
+	transform: rotateX(60deg);
+}
+
+.right h1 {
+	color: #fffec4;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+	font-size: 4vw;
+}
+
+.right p {
+	font-size: 1.2vw;
+	width: 90%;
+}
+
+#candy1 {
+	position: absolute;
+	top: 25%;
+	left: 8%;
+	width: 10%;
+	animation: Rotate 5s linear infinite;
+	z-index: 0;
+}
+
+#americano {
+	position: absolute;
+	top: 10%;
+	right: 5%;
+	transform: rotate(-20deg);
+	width: 10%;
 }
