--- a/scroll2/style.css
+++ b/scroll2/style.css
@@ -40,6 +40,7 @@ header {
 	height: 8vh;
 	padding: 0vw 5vw;
 	font-size: 1.3vw;
+	z-index: 99;
 }
 
 header i {
@@ -145,4 +146,74 @@ nav {
 	right: 5%;
 	transform: rotate(-20deg);
 	width: 10%;
+}
+
+/* three */
+
+.three {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100vh;
+	gap: 5vw;
+	background: linear-gradient(100deg, #f9f3cc, #ffd6a5);
+}
+
+.card {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 25vw;
+	height: 75vh;
+	gap: 3vh;
+	border-radius: 20px;
+	background-color: #fff;
+}
+
+.card h1 {
+	margin-top: 48vh;
+	font-size: 2.5vw;
+}
+
+.card button {
+	color: #fff;
+	font-size: 1.2vw;
+	font-weight: bold;
+	padding: 1vw 2vw;
+	border-radius: 25px;
+	border: none;
+}
+
+.first button {
+	background-color: #4e3636;
+}
+
+.second button {
+	background-color: #ff4b91;
+}
+
+.thrid button {
+	background-color: #b4d66c;
+}
+
+#cake1 {
+	position: absolute;
+	top: 18%;
+	width: 20%;
+}
+
+#strawberry,
+#lime {
+	position: absolute;
+	top: 0;
+	width: 15%;
+}
+
+#cupcake3 {
+	position: absolute;
+	top: 16%;
+	width: 18%;
 }
