feat: .two에서 progress bar 레이아웃 추가

--- a/corp/style.css
+++ b/corp/style.css
@@ -66,7 +66,14 @@ section {
 }
 
 .two {
+	gap: 7vh;
 	background-color: #ff6969;
+}
+
+.two .line {
+	width: 80%;
+	height: 2vh;
+	background-color: #fff;
 }
 
 .three {
