feat: .three 레이아웃 추가

--- a/corp/style.css
+++ b/corp/style.css
@@ -77,7 +77,55 @@ section {
 }
 
 .three {
+	position: relative;
 	background-color: #bb2525;
+}
+
+.three h1 {
+	position: absolute;
+	top: 20%;
+	right: 8%;
+	color: #fff;
+	font-size: 5vw;
+}
+
+.reveal {
+	opacity: 0;
+	visibility: hidden;
+}
+
+#tree {
+	position: absolute;
+	left: 10%;
+	width: 30%;
+}
+
+.present {
+	width: 10%;
+}
+
+#present1 {
+	position: absolute;
+	bottom: 23%;
+	right: 23%;
+}
+
+#present2 {
+	position: absolute;
+	bottom: 30%;
+	right: 31%;
+}
+
+#present3 {
+	position: absolute;
+	bottom: 30%;
+	right: 14%;
+}
+
+#present4 {
+	position: absolute;
+	bottom: 35%;
+	right: 22%;
 }
 
 .four {
