--- a/commission.web.example/.settings/org.eclipse.wst.common.component
+++ b/commission.web.example/.settings/org.eclipse.wst.common.component
@@ -24,10 +24,7 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-                                
-        
-        
-        <property name="context-root" value="example"/>
+        <property name="context-root" value="/"/>
                         	
     
     
