--- a/commission.web.example/src/main/webapp/resources/css/event.css
+++ b/commission.web.example/src/main/webapp/resources/css/event.css
@@ -2,9 +2,22 @@ body {
 	background: linear-gradient(100deg, #ffc5c5, #f9f3cc);
 }
 
-section {
+h1 {
+	font-size: 5vw;
+	color: #fff;
+}
+
+.one {
 	display: flex;
-	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding-top: 20vh;
+	padding-bottom: 12vh;
+}
+
+.two {
+	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
 	width: 100%;
@@ -18,7 +31,7 @@ section {
 	flex-direction: column;
 	justify-content: center;
 	width: 40vw;
-	height: 30vh;
+	height: 27vh;
 	gap: 2vh;
 	padding: 1vw;
 	border-radius: 20px;
