--- a/commission.web.example/src/main/webapp/resources/css/admin.css
+++ b/commission.web.example/src/main/webapp/resources/css/admin.css
@@ -26,26 +26,41 @@ h1 {
 
 .two div {
 	width: 50%;
-	height: 60vh;
+	height: fit-content;
 	background: #fff;
 }
 
 #list {
-	overflow-y: scroll;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+#list nav {
+	display: flex;
+	gap: 2vw;
+	padding-top: 20px;
+	padding-bottom: 10px;
+	margin: 10px 20px;
+	border-top: 1px solid #ffd6a5;
+}
+
+#list nav a:hover {
+	color: #ffd6a5;
+	font-weight: bold;
 }
 
 #list ol {
 	list-style: none;
-	padding: 1vw;
+	padding: 10px;
 }
 
 #list ol li {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	gap: 1vw;
-	padding: 0.5vw;
-	margin: 1.5vw 0;
+	gap: 5px;
+	padding: 10px;
 	color: #3b3b3b;
 }
 
@@ -67,13 +82,14 @@ h1 {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 20px;
 }
 
 #event-form {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 2.5vw;
+	gap: 20px;
 }
 
 #event-form button {
